fix overflow in characters name

--- a/src/components/Characters/characterCard.scss
+++ b/src/components/Characters/characterCard.scss
@@ -20,9 +20,11 @@
   }
 
   &__name {
-    max-width: 165px;
+    width: 165px;
     white-space: nowrap;
-    text-overflow: clip;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    text-align: center;
   }
 
   @media (min-width: 768px) {
